Fix #9: Change logo to SVG to decrease blurriness

--- a/assets/main.css
+++ b/assets/main.css
@@ -22,7 +22,7 @@ a {
 }
 
 .main-menu {
-    background: url(header-bar.png) transparent 0 25px repeat-x;
+    background: url(header-bar.png) transparent 0 25.5px repeat-x;
 }
 
 .navbar-toggler {
